# ContactTracing

./: README.md
NewPeer/: CMakeLists.txt  ds_peer.c  ds_peer.h  header.h  main.c  peer.c  peer.h
NewServer/: CMakeLists.txt  main.c  server.c  server.h
Peer/: CMakeLists.txt  common.h  ds_peer.c  ds_peer.h  header.h  main.c  peer.c  peer.h
Server/: CMakeLists.txt  main.c  server.c  server.h
Src/Peer/: CMakeLists.txt  buildWithGcc.sh  common.h  ds_peer.c  ds_peer.h  main.c  peer.c  peer.h
Src/Server/: CMakeLists.txt  buildWithGcc.sh  main.c  server.c
